# langgraph-evo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.cursor/rules/: reference_project.mdc  tech_stack_rules.mdc
docs/: README.md
docs/api/: README.md  state.md
docs/diagrams/: basic_workflow.md
docs/tutorials/: first_workflow.md  introduction.md
examples/: dynamic_workflow.py  psi_poc.py  psi_poc_with_registry.py  simple_fixed_workflow.py  supervisor_scratch.py
scripts/: prd.txt
src/langgraph_evo/: __init__.py  psi.py  psi2.py
src/langgraph_evo/components/: __init__.py  evaluator.py  evolution.py  factory.py  handlers.py  planner.py  supervisor.py  tools.py
src/langgraph_evo/config/: __init__.py  manager.py  schema.py  serialization.py  storage.py  validation.py
src/langgraph_evo/core/: __init__.py  agents.py  builder.py  config.py  registry.py  state.py  store.py  tool_registry.py  workflow.py
src/langgraph_evo/utils/: __init__.py
tests/: debug_workflow.py  test_basic_workflow.py  test_error_handling.py  test_fixed_workflow.py  test_state_reducer.py
